# kdppromo

./: .replit  app.py  models.py  pyproject.toml  replit.md
attached_assets/: Pasted-Build-a-production-ready-Flask-web-application-with-the_1771073196968.txt
services/: encryption.py
static/: manifest.json  service-worker.js
templates/: base.html  index.html  settings.html
