[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.2",
    "cryptography>=46.0.5",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.6",
    "openai>=2.21.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
